# google-aistudio-scraper

./: .gitignore  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  SETUP_GUIDE.md  _0prompts.json  main.py  pyproject.toml  quick_start.py  requirements.txt  setup.py
config/: __init__.py  settings.py
domain/: __init__.py  models.py
infrastructure/: __init__.py  browser.py  storage.py
services/: __init__.py  scraper_service.py
src/: browser.py  config.py  human_interaction.py  interaction.py  main.py  models.py  orchestrator.py  scraper.py  scraper_service.py  stealth_manager.py  utils.py
use_cases/: __init__.py  batch_processor.py
