[project]
name = "google-ai-studio-scraper"
version = "0.1.0"
description = ""
authors = [
    {name = "amir.espahbodi",email = "dev.amir.espahbodi@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "google_ai_studio_scraper", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
