[project]
name = "google-ai-studio-scraper"
version = "0.1.0"
description = ""
authors = [
    {name = "amir.espahbodi",email = "dev.amir.espahbodi@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "playwright (>=1.56.0,<2.0.0)",
    "aiofiles (>=25.1.0,<26.0.0)",
    "typing-extensions (>=4.15.0,<5.0.0)",
    "colorlog (>=6.10.1,<7.0.0)"
]

[tool.poetry]
packages = [{include = "google_ai_studio_scraper", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
