[project]
name = "gass"
version = "0.1.0"
description = ""
authors = [
    {name = "amir.espahbodi",email = "dev.amir.espahbodi@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "playwright (>=1.56.0,<2.0.0)",
    "playwright-stealth (>=2.0.0,<3.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "aiofiles (>=25.1.0,<26.0.0)"
]

[tool.poetry]
packages = [{include = "*", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
